# wikify

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  README.md  SConstruct  TODO.md  main.py  pyproject.toml  requirements.txt
data/: entity-registry.json
pipeline/llm/: __init__.py  client.py
pipeline/models/: __init__.py  entity.py  extraction.py  registry.py
tests/: conftest.py
tests/aggregation/: test_merge.py  test_session_entity.py  test_split.py
tests/builders/: __init__.py  test_aggregation.py  test_extraction.py
tests/extraction/: test_extract.py  test_parser.py  test_prompt.py
tests/git/: __init__.py  conftest.py  test_registry.py
tests/models/: test_entity.py  test_extraction.py  test_fact.py  test_registry.py  test_resolution.py
wikify/: config.py  scons.py
wikify/aggregation/: __init__.py  errors.py  merge.py  resolve.py  session_entity.py  split.py
wikify/builders/: __init__.py  aggregation.py  extraction.py
wikify/extraction/: __init__.py  errors.py  extract.py  parser.py  prompt.py
wikify/git/: __init__.py  errors.py  registry.py
wikify/llm/: client.py
wikify/models/: __init__.py  entity.py  extraction.py  fact.py  registry.py  resolution.py
