[project]
name = "aral"
version = "0.1.0"
description = "Extracts structured knowledge from RPG session notes and generates Wikipedia-style articles"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
    "anthropic",
    "scons",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
]
